--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -471,10 +471,11 @@
                   <div class="text_area">
                       <textarea placeholder="Escribe tu mensaje..."></textarea>
                        <div class="botones_ampliado">
-                       <button class="enviar_ampliado"><i class="fa fa-paper-plane"></i>Enviar</button>
-                       <button class="cerrar_ampliado"><i class="fa fa-close"></i><label for="check-{{item.from_publication__id}}">Cerrar</label></button>
-                       <button class="localizacion_ampliado"><i class="fa fa-map-marker"></i></button>
-                       <button class="foto_ampliado"><i class="fa fa-camera"></i></button>
+                        <button class="enviar_ampliado"><i class="fa fa-paper-plane"></i>Enviar</button>
+                        <button class="cerrar_ampliado"><i class="fa fa-close"></i><label for="check-{{item.from_publication__id}}">Cerrar</label></button>
+                        <button class="difundir_ampliado"><i class="fa fa-bullhorn"></i> Difundir mensaje</button>
+                        <button class="foto_ampliado"><i class="fa fa-paperclip"></i> Añadir archivo</button>
+                        <button class="localizacion_ampliado"><i class="fa fa-map-marker"></i> Añadir localización</button>
                        </div>
                   </div>
                   </div>
