--- a/skyfolk/templates/django_messages/trash.html
+++ b/skyfolk/templates/django_messages/trash.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load url from future %}
 
-{% block content %}
+{% block body %}
 <h3 class="trash_tittle">{% trans "Deleted Messages" %}</h3>
 {% if message_list %}
 <div class="container">
