--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -1,121 +1,30 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
 
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 body {
-    width: 100%;
-    height: auto;
-    padding: 0;
- }
-
-
-/* nav */
-.box-tool {
-  width: 99.3%;
-  height: 40px;
-  background-color: #fff;
-  box-shadow: 1px 1px 1px #f0f0f0;
-  list-style-type: none;
-  position: absolute;
-  top: 0;
-  z-index: 9999;
+    font-size: 11.5px !important;
+    font-style: normal;
+    font-weight: 300;
+    font-family: 'Open Sans', sans-serif !important;
+    color: #555;
 }
-.box-tool li:nth-child(1) {
-  position: relative;
+
+.wrapper {
+  font-size: 1.1em;
+  margin-top: 5%;
+  margin-bottom: 1em;
+}
+.body-wrapper {
   margin: auto;
-  width: 40px;
-  height: 40px;
-  background-repeat: no-repeat;
-  background-size: 120px;
-  background-position: center;
-  background-color: transparent;
-  border: none;
-    -webkit-transition: all .3s linear;
-  -moz-transition: all .3s linear;
-  transition: all .3s linear;
 }
-.box-tool .chat {
-  width: 50px;
-  height: 50px;
-  border: none;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position:center;
-  background-color: transparent;
-  margin: auto;
-  top: -44px;
-  float: right;
-  right: 20px;
-}
-.box-tool li:hover {
-   -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-    transform:scale(1.1);
-  border: none;
-  background-color: transparent;
-}
-.box-tool li img {
-  position: relative;
-  width: 120px;
-  height: 120px;
-}
-.vertical-nav {
-  float: left;
-  width: 15%;
-  z-index: 9999;
-  margin-top: 30px;
-}
-.vertical-nav a {
-  display: block;
-  width: 100%;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-  margin-top: 4px;
-  cursor: pointer;
-  color: #424242;
-  -webkit-transition: all .2s ease-in;
-  -moz-transition: all .2s ease-in;
-  transition: all .2s ease-in;
-}
-.vertical-nav a:hover > .chip {
-  background-color: #1e88e5;
-}
-
-.vertical-nav a:hover {
-  color: #1e88e5;
-}
-
-.vertical-nav a i, .vertical-nav-2 a i {
-  margin-left: 17px;
-}
-
 #new_message {
   padding: 10px 20px;
   height: 60px;
   text-transform: uppercase;
-}
-
-.vertical-nav-2 {
-  float: right;
-  width: 15%;
-  margin-top: 30px;
-}
-.vertical-nav-2 a {
-  display: block;
-  width: 100%;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-  margin-top: 4px;
-  cursor: pointer;
-  color: #424242;
-  -webkit-transition: all .2s ease-in;
-  -moz-transition: all .2s ease-in;
-  transition: all .2s ease-in;
-}
-
-.vertical-nav-2 a:hover > .chip {
-  background-color: #1e88e5;
-}
-
-.vertical-nav-2 a:hover {
-  color: #1e88e5;
 }
 
 .image-user {
@@ -124,32 +33,7 @@ body {
   height: 80px;
   border-radius: 100%;
 }
-#contenedor_messages {
-  margin-top: 80px;
-  max-width: 1100px;
-  margin-left: 300px;
-  margin-right: 150px;
-}
 
-@media screen and (max-width: 800px) {
-
-  #contenedor_messages {
-  margin-left: 160px;
-    }
- }
-
-@media screen and (min-width: 800px) and (max-width: 1000px) {
-
-    #contenedor_messages {
-  margin-left: 160px;
-    }
- }
-@media screen and (min-width: 1000px) {
-
-  #contenedor_messages {
-    margin-left: 410px;
-  }
-}
 .no_messages {
   color: rgb(185,230,207);
   position: relative;
@@ -238,36 +122,7 @@ label[for="id_body"] {
   resize: none;
   transition: all .3s ease-in;
 }
-form button {
-  margin-left: 32%;
-  top: 10px;
-}
 
-.contenedor > form:nth-child(1) > input:nth-child(3) {
-  background-color: #5cb85c;
-  padding: 12px 12px;
-  border: 0;
-  outline: none;
-  border-radius: 4px;
-  font-size: 14px;
-  color: #FFE1E1;
-  font-width: 400;
-  position: absolute;
-  margin-top: 30px;
-  display: inline-block;
-  transition: all .3s ease-in;
-  cursor: pointer;
-  float: right;
-  right: 20px;
-}
-
-.contenedor > form:nth-child(1) > input:nth-child(3):hover {
-  background-image: url('https://cdn2.iconfinder.com/data/icons/inverticons-fill-vol-2/32/paper_plane_document_send_sent_mail-512.png');
-  background-size: 40px;
-  background-repeat: no-repeat;
-  background-position: center;
-  color: transparent;
-}
 .time {
   font-size: 0.9em;
   font-style: normal;
@@ -341,25 +196,74 @@ blockquote {
   top: 90%;
 }
 
-@media only screen and (max-width: 1200px) {
-  .vertical-nav {
-    display: none;
-  }
-  form button {
-    margin-left: 20%;
-  }
-  .vertical-nav-2 {
-    display: none;
-
-  }
+.menu-messages {
+  position: relative;
+  display: block;
+  float: left;
+  height: auto;
+  background-color: #eeeeee;
 }
-@media only screen and (min-width: 1200px) and (max-width: 1800px) {
-    form button {
-      margin-left: 30%;
-    }
+.menu-messages a {
+  flex: 1;
+  text-decoration: none;
+  color: grey;
+  text-align: center;
+  height: 40px;
+  display: block;
+  border-right: 2px solid #1e88e5;
+  background-color: #fff;
+  margin-bottom: 5px;
+  transition: all .3s linear;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+}
+.menu-messages a:hover {
+  color: #1e88e5;
+  border-right: 10px solid #eee;
 }
 
+.menu-messages-2 {
+  position: relative;
+  display: block;
+  float: right;
+  height: auto;
+  background-color: #eeeeee;
+}
+.menu-messages-2 a {
+  flex: 1;
+  text-decoration: none;
+  color: grey;
+  text-align: center;
+  height: 40px;
+  display: block;
+  border-right: 2px solid #1e88e5;
+  background-color: #fff;
+  margin-bottom: 5px;
+  transition: all .3s linear;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s linear;
+}
+.menu-messages-2 a:hover {
+  color: #1e88e5;
+  border-right: 10px solid #eee;
+}
 
+.card {
+  padding: 10px;
+  height: 200px;
+}
+.card .msg-inbox  {
+  position: relative;
+  top: 0;
+  display: block;
+}
+.card a:first-child {
+  font-size: 1.8em;
+  color: #1e88e5;
+  font-weight: 400;
+  margin-bottom: 10px;
+  display: block;
+}
 /* MAS VISIBILIDAD PARA LOS PLACEHOLDER'S AL COMPONER UN MENSAJE */
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
