--- a/skyfolk/templates/django_messages/compose.html
+++ b/skyfolk/templates/django_messages/compose.html
@@ -1,6 +1,6 @@
 {% extends "django_messages/base.html" %}
 {% load i18n %}
-{% block content %}
+{% block body %}
 
     <h3 class="compose_message">{% trans "Compose Message"%}</h3>
         <div class="container">
