--- a/skyfolk/templates/django_messages/inbox.html
+++ b/skyfolk/templates/django_messages/inbox.html
@@ -3,60 +3,40 @@
 {% load url from future %}
 {% load app_filters %}
 {% block include_files %}
-<body>
-
-{% block content %}
-
-<body>
-
-{% if message_list %}
-
-<div class="container" id="contenedor_messages">
-
-
-    <!--<thead>
-        <tr><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Received" %}</th><th>{% trans "Action" %}</th></tr>
-    </thead>-->
-    <tbody>
-
-<!-- Codigo modificado (Adrian) -->
-   <div class="row">
-   {% for message in message_list %}
-            <div class="col s6 m8 l5">
-             <div class="grey lighten-4 card-panel teal">
-            <div class="col s5">
-                {% if user_profile.profile.image %}
-                    <img class="image-user" id="image_user" src="{{user_profile.profile.image.url}}">
-                    <span class="blue-text">{{ message.sender }}</span>
-                {% else %}
-                    <img class="image-user" id="image_user" src="{{STATIC_URL}}img/generic-avatar.png">
-                    <span class="blue-text">{{ message.sender }}</span>
-                {% endif %}
+{% endblock %}
+  {% block body %}
+  <div class="col-lg-6 col-md-12 col-sm-12 body-wrapper">
+  {% if message_list %}
+     {% for message in message_list %}
+              <div class="col-sm-12 col-md-12 col-lg-12 card">
+              <div class="col-lg-3 col-md-12 col-sm-12">
+                  {% if user_profile.profile.image %}
+                      <img class="image-user" id="image_user" src="{{user_profile.profile.image.url}}">
+                      <span class="blue-text">{{ message.sender }}</span>
+                  {% else %}
+                      <img class="image-user" id="image_user" src="{{STATIC_URL}}img/generic-avatar.png">
+                      <span class="blue-text">{{ message.sender }}</span>
+                  {% endif %}
+              </div>
+              <div class="col-lg-4 col-md-8 col-sm-8 msg-inbox">
+                  {% if message.new %}
+                      <h5><b><a class="message_subject" href="{{message.get_absolute_url }}">{{ message.subject }}</a></b></h5>
+                      <i class="time">{{ message.sent_at|date:_("DATETIME_FORMAT") }}</i>
+                      <br><br>
+                  {% endif %}
+                  {% if message.replied %}
+                  <h5><a class="message_subject" href="{{message.get_absolute_url }}">{{ message.subject }}</a></h5>
+                  <i class="time">{{ message.sent_at|date:_("DATETIME_FORMAT") }}</i>
+                  <br><br>
+                  {% endif %}
+                   <blockquote onclick="javascript:location.href='{{message.get_absolute_url }}'" class="grey-text truncate">{{message.body}}</blockquote>
+                   <a class="borrar" href="{% url 'messages_delete' message.id %}">Borrar</a>
+              </div>
             </div>
-                {% if message.new %}
-                    <h5><b><a class="message_subject" href="{{message.get_absolute_url }}">{{ message.subject }}</a></b></h5>
-                    <i class="time">{{ message.sent_at|date:_("DATETIME_FORMAT") }}</i>
-                    <br><br>
-                {% endif %}
-                {% if message.replied %}
-                <h5><a class="message_subject" href="{{message.get_absolute_url }}">{{ message.subject }}</a></h5>
-                <i class="time">{{ message.sent_at|date:_("DATETIME_FORMAT") }}</i>
-                <br><br>
-                {% endif %}
-                 <blockquote onclick="javascript:location.href='{{message.get_absolute_url }}'" class="grey-text truncate">{{message.body}}</blockquote>
-                 <a class="borrar" href="{% url 'messages_delete' message.id %}">Borrar</a>
-        </div>
-      </div>
-      {% endfor %}
+        {% endfor %}
+  {% else %}
+  <p class="no_messages">{% trans "¡No tienes mensajes!" %}</p>
+  <img class="no_mess" src="http://blog.cteep.com/wp-content/uploads/sugerencias.png" title="no_messages" alt="no_messages">
+  {% endif %}
 </div>
-
-
-    </tbody>
-</div>
-{% else %}
-<p class="no_messages">{% trans "¡No tienes mensajes!" %}</p>
-<img class="no_mess" src="http://blog.cteep.com/wp-content/uploads/sugerencias.png" title="no_messages" alt="no_messages">
-{% endif %}
 {% endblock %}
-{% endblock %}
-</body>
