--- a/skyfolk/templates/django_messages/outbox.html
+++ b/skyfolk/templates/django_messages/outbox.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load url from future %}
 
-{% block content %}
+{% block body %}
 <h3 class="outbox_title">{% trans "Sent Messages" %}</h3>
 {% if message_list %}
     <div class="container">
