--- a/skyfolk/templates/django_messages/view.html
+++ b/skyfolk/templates/django_messages/view.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load url from future %}
 
-{% block content %}
+{% block body %}
 <h3 class="view_tittle">Mensajes con {{  message.sender }}.</h3>
 <div class="container">
     <div class="col s12 m12 l9z-depth-1 mensajes">
