--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -156,16 +156,30 @@ label[for="id_body"] {
   text-align: center;
 }
 .trash_tittle {
-
   font-family: 'Open Sans', sans-serif;
   font-weight: 100;
   text-align: center;
 }
-blockquote {
-  cursor: pointer;
+
+.card {
+  background-color: #f5f5f5;
 }
-
-
+.card blockquote {
+  cursor: pointer;
+  font-size: 1.3em;
+  border-left: 6px solid #f44336;
+  padding: 7px;
+  display: inline-block;
+}
+.card .borrar {
+  font-size: 2em;
+  color: tomato;
+  position: relative;
+  top: 90%;
+  display: inline;
+  float: right;
+  text-decoration: none;
+}
 .mensajes {
   position: relative;
   margin: auto;
@@ -194,8 +208,21 @@ blockquote {
   position: fixed;
   right: 2%;
   top: 90%;
+  text-align: center;
+  background-color: #1e88e5;
+  color: white;
+  border-radius: 100%;
+  cursor: pointer;
+  padding-top: 25px;
+  width: 70px;
+  height: 70px;
+  transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
 }
-
+#compose-button-message:hover {
+  opacity: 0.7;
+}
 .menu-messages {
   position: relative;
   display: block;
@@ -263,6 +290,25 @@ blockquote {
   font-weight: 400;
   margin-bottom: 10px;
   display: block;
+  text-decoration: none;
+}
+.card .blue-text {
+  color: #1e88e5;
+  font-size: 1.2em;
+  font-weight: 400;
+}
+.card .new-message {
+    position: relative;
+    font-size: 1.6em;
+    color: #1e88e5;
+    margin-left: 20px;
+}
+
+.card .replied-message {
+  position: relative;
+  font-size: 1.6em;
+  color: #1e88e5;
+  margin-left: 20px;
 }
 /* MAS VISIBILIDAD PARA LOS PLACEHOLDER'S AL COMPONER UN MENSAJE */
 
