--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -135,13 +135,7 @@ label[for="id_body"] {
   margin-top: -60px;
 
 }
-.outbox_title {
 
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  text-align: center;
-
-}
 .outbox_sent {
 
   border-bottom: 1px solid #e0e0e0;
@@ -155,11 +149,7 @@ label[for="id_body"] {
   font-weight: 100;
   text-align: center;
 }
-.trash_tittle {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  text-align: center;
-}
+
 
 .card {
   background-color: #f5f5f5;
@@ -325,4 +315,52 @@ label[for="id_body"] {
 }
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: 424242;
+}
+
+
+/* Trash */
+
+.trash_tittle, .outbox_title {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  text-align: center;
+  font-size: 2em;
+  margin-top: -45px;
+  padding: 10px;
+}
+
+.messages {
+  font-size: 1.4em;
+}
+.no-msg {
+  font-size: 1.3em;
+  color: #212121;
+}
+.messages a {
+  text-decoration: none;
+}
+.messages thead {
+  font-weight: 400;
+  color: #ffffff;
+  background: #1e88e5;
+  height: 40px;
+  display: table-header-group;
+}
+.messages thead th {
+  padding: 10px;
+  left: -10px;
+}
+.messages tbody tr {
+  color: tomato;
+  position: relative;
+  color: #212121;
+}
+.messages tbody tr:nth-child(2n+2) {
+    background-color: #f5f5f5;
+}
+.messages tbody tr td {
+  padding-left: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
 }
