--- a/skyfolk/templates/django_messages/outbox.html
+++ b/skyfolk/templates/django_messages/outbox.html
@@ -5,7 +5,7 @@
 {% block body %}
 <h3 class="outbox_title">{% trans "Sent Messages" %}</h3>
 {% if message_list %}
-    <div class="container">
+<div class="col-lg-6 col-md-12 col-sm-12">
 <table class="messages">
     <thead>
         <tr><th>{% trans "Recipient" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Sent" %}</th><th>{% trans "Action" %}</th></tr>
@@ -25,6 +25,6 @@
 </table>
 </div>
 {% else %}
-<p>{% trans "No messages." %}</p>
+<p class="no-msg">{% trans "No messages." %}</p>
 {% endif %}
 {% endblock %}
