--- a/skyfolk/templates/django_messages/trash.html
+++ b/skyfolk/templates/django_messages/trash.html
@@ -5,13 +5,14 @@
 {% block body %}
 <h3 class="trash_tittle">{% trans "Deleted Messages" %}</h3>
 {% if message_list %}
-<div class="container">
+<div class="col-lg-6 col-md-12 col-sm-12">
 <table class="messages">
     <thead>
         <tr><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Date" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
     <tbody>
 {% for message in message_list %}
+<div class="col-lg-12 col-md-12 col-sm-12 table-body">
     <tr>
         <td>{{ message.sender }}</td>
         <td>
@@ -19,15 +20,15 @@
         </td>
         <td>{{ message.sent_at|date:_("DATETIME_FORMAT") }}</td>
         <td><a href="{% url 'messages_undelete' message.id %}">{% trans "undelete" %}</a></td>
-
     </tr>
+ <div>
 {% endfor %}
     </tbody>
 </table>
-    {% else %}
-    <p>{% trans "No messages." %}</p>
-    {% endif %}
-    <br />
-    <p>{% trans "Deleted Messages are removed from the trash at unregular intervals, don't rely on this feature for long-time storage." %}</p>
-    {% endblock %}
+{% else %}
+<p class="no-msg">{% trans "No messages." %}</p>
+{% endif %}
+<br />
+<p class="no-msg">{% trans "Deleted Messages are removed from the trash at unregular intervals, don't rely on this feature for long-time storage." %}</p>
+{% endblock %}
 </div>
