--- a/skyfolk/templates/django_messages/compose.html
+++ b/skyfolk/templates/django_messages/compose.html
@@ -1,17 +1,14 @@
 {% extends "django_messages/base.html" %}
 {% load i18n %}
 {% block body %}
-
     <h3 class="compose_message">{% trans "Compose Message"%}</h3>
-        <div class="container">
-            <form action="" method="post">
-                {% csrf_token %}
+        <div class="col-lg-6 col-md-12 col-sm-12">
+            <form action="" method="post">{% csrf_token %}
             <table class="z-depth-1 compose_table">
                 {{ form.as_table }}
             </table>
-            <button class="compose-button waves-effect waves-light btn" type="submit" value="{% trans "Send" %} &raquo;">Enviar</button>
+           <button class="compose-button" type="submit" value="{% trans "Send" %} &raquo;">Enviar</button>
             </form>
-
         </div>
     <!-- Reajusta el tamaño del textarea, conforme vamos escribiendo -->
 	<script>
