--- a/skyfolk/static/css/mensajes_privados.css
+++ b/skyfolk/static/css/mensajes_privados.css
@@ -60,15 +60,32 @@ body {
   margin: auto;
   display: block;
   border-radius: 7px;
-  border: 3px solid #1E88E5;
+  border-bottom: 3px solid #1E88E5;
+  height: auto;
+  background-color: #fafafa;
 }
-.compose_table textarea {
-  width: 100%;
-  right: -100%;
-  top: -50px;
+.compose_table tr:last-child td {
   height: 200px;
   position: relative;
   display: block;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  left: 45px;
+}
+
+.compose_table textarea {
+  border: none;
+  border-bottom: solid 2px #c9c9c9;
+  transition: border 0.3s;
+  outline: none;
+  background-color: transparent;
+  height: 100%;
+  font-size: 1.3em;
+  color: #212121;
+}
+.compose_table textarea:focus {
+  border-bottom: solid 2px #1E88E5;
+
 }
 label[for="id_recipient"] {
   display: none;
@@ -86,9 +103,9 @@ label[for="id_body"] {
   border-bottom: solid 2px #c9c9c9;
   transition: border 0.3s;
   outline: none;
-  width: 80%;
+  width: 79%;
   background-color: transparent;
-  margin-left: 10%;
+  margin-left: 6.5%;
 }
 #id_recipient:focus, #id_subject:focus {
   border-bottom: solid 2px #1E88E5;
@@ -116,8 +133,9 @@ label[for="id_body"] {
   transition: all 0.2s ease-out 0s;
   cursor: pointer;
   margin-top: -45px;
-  margin-left: 7px;
-  position: absolute;
+  margin-right: 10px;
+  position: relative;
+  float: right;
   outline: none;
 }
 .compose-button:hover {
@@ -125,6 +143,7 @@ label[for="id_body"] {
   background-color: #eee;
   color: grey;
 }
+
 .outbox_sent {
   border-bottom: 1px solid #e0e0e0;
 }
@@ -354,4 +373,3 @@ label[for="id_body"] {
 }
 
 /* Compose */
-
