--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -70,6 +70,94 @@
         <button class="fontawesome-map-marker"><i class="fa fa-map-marker"> </i> Añadir localización</button>
     </form>
   </div>
+
+  <!-- Atajos del usuario -->
+
+  <div id="atajos-keyboard-profile">
+    <table class="modal-table" summary="Atajos para acciones comunes.">
+      <div class="atajos-title">
+      Atajos de teclado
+      <i class="fa fa-close"></i>
+      </div>
+        <thead>
+        <div class="acc-atajos-div">
+          <tr class="acc-atajos">
+            <th colspan="2">Acciones</th>
+          </tr>
+          </div>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">m</b>
+            </td>
+            <td class="shortcut-label">Nuevo comentario</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">f</b>
+            </td>
+            <td class="shortcut-label">Favorito</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">r</b>
+            </td>
+            <td class="shortcut-label">Responder</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">a</b>
+            </td>
+            <td class="shortcut-label">Abrir atajos</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">d</b>
+            </td>
+            <td class="shortcut-label">Mensaje privado</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">s</b>
+            </td>
+            <td class="shortcut-label">Silenciar usuario</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">b</b>
+            </td>
+            <td class="shortcut-label">Bloquear usuario</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">o</b>
+            </td>
+            <td class="shortcut-label">Cerrar mensajes</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">p</b>
+            </td>
+            <td class="shortcut-label">Expandir foto</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">/</b>
+            </td>
+            <td class="shortcut-label">Buscar</td>
+          </tr>
+          <tr>
+            <td class="shortcut">
+              <b class="sc-key">Shift</b>
+              +
+              <b class="sc-key">Enter</b>
+            </td>
+            <td class="shortcut-label">Enviar comentario</td>
+          </tr>
+        </tbody>
+      </table>
+  </div>
 {% endif %}
   </body>
 </html>
