--- a/skyfolk/templates/account/nuevosusuarios.html
+++ b/skyfolk/templates/account/nuevosusuarios.html
@@ -10,6 +10,7 @@
     <script src="{{STATIC_URL}}js/welcome.js"></script>
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/welcome.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 
 
@@ -21,9 +22,9 @@
             <div class="col s12 m12 l12">
                 <div class="card blue-grey lighten-5">
                     <div class="card-content blue-text">
-                        <h3 onclick="newUserIsOk('{{ newUser }}')">Bienvenido a Skyfolk.</h3>
+                        <h3> Bienvenido a Skyfolk.</h3>
                         <h5>Vamos a preparar tu cuenta.</h5>
-                    </div> 
+                    </div>
                     <div class="progress">
                         <div class="indeterminate"> </div>
                     </div>
@@ -32,7 +33,7 @@
             </div>
         </div>
         <a onclick="location.href='/step1/{{request.user}}'" class="waves-effect waves-light btn right" onload="loadButtons()">Configurar cuenta</a>
-        <a onclick="location.href='/profile/{{request.user}}'" class="waves-effect waves-light btn" onload="loadButtons()">Omitir</a>
+        <a onclick="setfirstLogin(this);" href="/profile/{{newUser}}" id="omitir-{{newUser}}" class="waves-effect waves-light btn" onload="loadButtons()">Omitir</a>
         {% endblock %}
     </div>
 
