--- a/skyfolk/templates/django_messages/inbox.html
+++ b/skyfolk/templates/django_messages/inbox.html
@@ -38,8 +38,9 @@
             </div>
         {% endfor %}
   {% else %}
-  <p class="no_messages">{% trans "¡No tienes mensajes!" %}</p>
-  <img class="no_mess" src="http://blog.cteep.com/wp-content/uploads/sugerencias.png" title="no_messages" alt="no_messages">
+  <p class="no_messages">{% trans "¡No tienes mensajes!" %}<br>
+  <img class="no_mess" src="{{STATIC_URL}}img/logo.png" title="no_messages" alt="no_messages"></p>
+
   {% endif %}
 </div>
 {% endblock %}
