--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -2152,102 +2152,93 @@ z-index:  101;
   position: fixed;
   right: 0;
   display: none;
-  margin-top: -50px;
-  width: 18.123%;
+  top: 40px;
   background-color: rgba(189, 189, 189, 0.7);
   height: 100%;
   z-index: 9998;
-}
-/* CHAT EN MENU VERTICAL */
-.chat_1 {
-  position: absolute;
-  margin: auto;
-  width: 100%;
-  height: 300px;
-  background-color: #fff;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-  top: 50%;
-}
-.chat_1 p {
-  left: 15px;
-  position: relative;
-  display: inline;
-  top: 7px;
-  font-size: 12px;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  max-width: 100%;
+  overflow: hidden;
 }
-.chat_1 .me {
+.nav-vertical-and-chat .notification-like {
+  height: 110px;
+  margin-top: 2%;
   display: list-item;
+  background-color: #fff;
+  opacity: 0.5;
+  -webkit-transition: all .1s linear;
+  -moz-transition: all .1s linear;
+  transition: all .1s linear;
+}
+.nav-vertical-and-chat .notification-like:hover {
+  opacity: 1;
+}
+.nav-vertical-and-chat .notification-like .hexagon {
   position: relative;
-  left: 0px;
-  float: left;
-  width: 100%;
-  height: auto;
-  background-color: rgba(232, 225, 225, 0.12);
-  margin-bottom: 17px;
-  border-bottom-left-radius: 38px;
-  border-top-left-radius: 38px;
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
-  border: 1px solid #efefef;
-  -webkit-transition: all .3s ease-in;
-  -moz-transition: all .3s ease-in;
-  transition: all .3s ease-in;
+  width: 50px; 
+  height: 28.87px;
+  background-color: #f48fb1;
+  margin: 14.43px 0;
+  top: 25%;
+  margin-left: 5%;
 }
-.chat_1 img:hover {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  transform: scale(1.1);
-  border: 1px solid tomato;
-}
-.chat_1 .me img {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  float: left;
-  margin-left: 0.4px;
-  border: 1px solid transparent;
-  position: relative;
-}
-.chat_1 .you {
-  display: list-item;
-  float: right;
-  right: 0;
-  width: 100%;
-  height: auto;
-  background-color: rgba(232, 225, 225, 0.12);
-  margin-bottom: 17px;
-  border-bottom-right-radius: 38px;
-  border-top-right-radius: 38px;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
-  border: 1px solid #efefef;
-}
-.chat_1 .you img {
-  width: 50px;
-  height: 50px;
-  border-radius: 100%;
-  float: right;
-  margin-right: 0.4px;
-  position: relative;
-}
-.chat_1 .ventana_m {
-  width: 100%;
-  height: 80%;
-  border-bottom: 2px solid #ececec;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  position: relative;
-}
-.conver {
-  display: block;
+.nav-vertical-and-chat .notification-like .hexagon i  {
   position: absolute;
-  top: 50px;
-  width: 86%;
-  left: 21px;
-  list-style-type: none;
+  margin-top: 5px;
+  margin-left: 12px;
+  font-size: 2em;
+  color: #fff;
+}
+.nav-vertical-and-chat .notification-like .hexagon:before,
+.nav-vertical-and-chat .notification-like .hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+}
+
+.nav-vertical-and-chat .notification-like .hexagon:before {
+  bottom: 100%;
+  border-bottom: 14.43px solid #f48fb1;
+}
+
+.nav-vertical-and-chat .notification-like .hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 14.43px solid #f48fb1;
+}
+
+.nav-vertical-and-chat .notification-like .notification-content {
+  height: 100%;
+  float: right;
+  margin-right: 2.5%;
+  text-align: center;
+}
+.nav-vertical-and-chat .notification-like .notification-content h4 {
+  font-size: 1.4em;
+  margin-top: 15px;
+}
+.nav-vertical-and-chat .notification-like .notification-content .notification-show {
+  border: medium none;
+  border-radius: 3spx;
+  display: inline-block;
+  height: 36px;
+  padding: 0px 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #212121;
+  background-color: #eee;
+  text-align: center;
+  letter-spacing: 0.5px;
+  transition: all 0.2s ease-out 0s;
+  cursor: pointer;
+  float: right;
+  outline: none;
+  margin-top: 40px;
+}
+.nav-vertical-and-chat .notification-like .notification-content .notification-show:hover {
+  opacity: 0.8;
+  color: #8bc34a;
 }
 .ctrl {
   position: absolute;
