+ Version V1 + Cambios interfaz + Profile, search y seguidores

--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -33,7 +33,7 @@
         </div>
         <div class="col-lg-12">
             <div class="name-friend">
-            <p>{{ item.user__username }} </p><br>
+            <a href="/profile/{{ item.user__username }}">@{{ item.user__username }} </a><br><br>
                 <p>{{ item.user__first_name }} {{item.user__last_name}}</p>
             </div>
 
