--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -3,12 +3,11 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-body {
-    font-size: 11.5px !important;
-    font-style: normal;
-    font-weight: 300;
-    font-family: 'Open Sans', sans-serif !important;
-    color: #555;
+
+html, body {
+  color: #555 !important;
+  font-family: 'Open Sans', sans-serif !important;
+  font-size: 11.5px !important;
 }
 
 .container .personal-card {
@@ -16,6 +15,7 @@ body {
     width: 100%;
     margin-top: 20px;
     height: 300px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
 }
 
 .container .header {
@@ -60,7 +60,8 @@ body {
     margin-top: -30px;
     float: right;
     margin-right: 20px;
-    background-color: tomato;
+    background-color: #1e88e5;
+    color: #fff;
     border-radius: 100%;
     width: 50px;
     margin-left: 300px;
@@ -79,7 +80,15 @@ body {
     margin-top: 50px;
     text-align: center;
     border-radius: 7px;
-    padding: 2px;
+    padding: 10px;
     color: grey;
     background-color: #e0e0e0;
+}
+
+.container .personal-card .name-friend a:first-child {
+    color: #1e88e5;
+    text-decoration: none;
+}
+.container .personal-card .name-friend p:last-child {
+    color: #414141;
 }
