--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -268,6 +268,8 @@
   padding: 0px 10px;
   color: #424242;
   font-size: 1.4em;
+  font-weight: 100;
+  font-family: 'Open Sans', sans-serif !important;
   -webkit-transition: all .1s ease-in-out;
   transition: all .1s ease-in-out;
   -moz-transition: all .1s ease-in-out;
