--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -4,9 +4,9 @@
         <div id="toggle">
           <ul class="menup">
               {% if request.user.profile.image %}
-                <li class="profilee"><img src="{{ request.user.profile.image.url }}"><i onclick="location.href='/profile/{{ request.user }}'">{{ request.user.username }}</i></li>
+                <li onclick="location.href='/profile/{{ request.user }}'" class="profilee"><img src="{{ request.user.profile.image.url }}"><i>{{ request.user.username }}</i></li>
               {% else %}
-               <li class="profilee"><img src="{{STATIC_URL}}img/nuevo.png"><i onclick="location.href='/profile/{{ request.user }}'">{{ request.user.username }}</i></li>
+               <li onclick="location.href='/profile/{{ request.user }}'" class="profilee"><img src="{{STATIC_URL}}img/nuevo.png"><i>{{ request.user.username }}</i></li>
               {% endif %}
             <li onclick="location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion </li>
             <li onclick="location.href='/messages/inbox/'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
