--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -122,29 +122,33 @@ a, a:visited {
   background-color: #fff;
   border-radius: 100%;
   float: right;
-  margin-right: 3px;
-  top: 2px;
-    text-align: center;
+  margin-right: 7px;
+  margin-top: 7px;
+  display: inline-block;
+  text-align: center;
   -webkit-box-shadow: 0px 0px 1px 0px rgba(50, 50, 50, 0.75);
   -moz-box-shadow:    0px 0px 1px 0px rgba(50, 50, 50, 0.75);
   box-shadow:         0px 0px 1px 0px rgba(50, 50, 50, 0.75);
 }
 .wrapper .box .zoom-pub .fa-expand {
-  color: #2E2E2E;
-  font-size: 0.9em;
-  -webkit-transition: all .3s linear;
-  -moz-transition: all .3s linear;
-  transition: all .3s linear;
+  color: #212121;
+  font-size: 100%;
+  -webkit-transition: all .1s linear;
+  -moz-transition: all .1s linear;
+  transition: all .1s linear;
   cursor: pointer;
 }
+
 .wrapper .box .zoom-pub .fa-expand:hover {
 	color: #1E88E5;
 }
+
 .wrapper .box .zoom-pub:hover {
   -webkit-box-shadow: 0px 0px 1px 0px #1E88E5;
   -moz-box-shadow:    0px 0px 1px 0px #1E88E5;
   box-shadow:         0px 0px 1px 0px #1E88E5;
 }
+
 input[type="checkbox"] {
   opacity: 0;
 }
