--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1142,7 +1142,7 @@ a {
   height:100%;
 
 }
-#tab-amigos ul.list-friends {
+#tab-amigos ul.list {
   position: relative;
   margin: auto;
   list-style-type: none;
@@ -1152,7 +1152,7 @@ a {
 #hood-tabs::-webkit-scrollbar { display: none; }
 
 
-#tab-amigos ul.list-friends li {
+#tab-amigos ul.list li {
   display: table;
   background-color: #FAFAFA;
   margin: 10px;
@@ -1167,7 +1167,7 @@ a {
 
 }
 
-#tab-amigos ul.list-friends li img {
+#tab-amigos ul.list li img {
   width: 72px;
   height: 72px;
   float: left;
@@ -1176,7 +1176,7 @@ a {
 
 }
 
-#tab-amigos ul.list-friends li a {
+#tab-amigos ul.list li a {
   text-decoration: none;
   margin: auto;
   vertical-align: middle;
@@ -1191,7 +1191,7 @@ a {
   width:100%;
 
 }
-#tab-amigos ul.list-friends li a:hover {
+#tab-amigos ul.list li a:hover {
   opacity: 0.5;
   transition: all .2s ease-in;
 }
@@ -2177,7 +2177,7 @@ z-index:  101;
 }
 .nav-vertical-and-chat .notification-like .hexagon {
   position: relative;
-  width: 50px; 
+  width: 50px;
   height: 28.87px;
   background-color: #f48fb1;
   margin: 14.43px 0;
@@ -2223,7 +2223,7 @@ z-index:  101;
 }
 .nav-vertical-and-chat .notification-like .notification-content .notification-show {
   border: medium none;
-  border-radius: 3spx;
+  border-radius: 3px;
   display: inline-block;
   height: 36px;
   padding: 0px 2rem;
